--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                                 <div class="card mb-3" style="max-width: 600px; " data-aos="fade-up-right">
                                     <div class="row g-0">
                                         <div class="col-md-4">
-                                            <img src="./img/project4.png" class="img-fluid rounded-start py-5"
+                                            <img src="./img/Screenshot(4).png" class="img-fluid rounded-start py-5"
                                                 alt="...">
                                         </div>
                                         <div class="col-md-8">
